Added token routes for creating and deleting multiple tokens for an application.
