# action/organisation/application/route.go
@@ -1,6 +1,7 @@
 package application
 
 import (
+	"github.com/factly/kavach-server/action/organisation/application/token"
 	"github.com/factly/kavach-server/action/organisation/application/user"
 	"github.com/factly/kavach-server/model"
 	"github.com/go-chi/chi"
@@ -26,9 +27,9 @@ func Router() chi.Router {
 	r.Get("/{application_slug}/access", access)
 	r.Route("/{application_id}", func(r chi.Router) {
 		r.Get("/", details)
-		r.Get("/generateToken", getAPIToken)
 		r.Put("/", update)
 		r.Delete("/", delete)
+		r.Mount("/tokens", token.Router())
 		r.Mount("/users", user.Router())
 	})
 
