# model/application.go
@@ -9,17 +9,26 @@ import (
 // Application model defination
 type Application struct {
 	Base
-	Name           string        `gorm:"column:name" json:"name"`
-	Slug           string        `gorm:"column:slug" json:"slug"`
-	Description    string        `gorm:"column:description" json:"description"`
-	URL            string        `gorm:"column:url" json:"url"`
-	MediumID       *uint         `gorm:"column:medium_id;default:NULL" json:"medium_id"`
-	Medium         *Medium       `gorm:"foreignKey:medium_id" json:"medium"`
-	OrganisationID uint          `gorm:"column:organisation_id" json:"organisation_id"`
-	Organisation   *Organisation `gorm:"foreignKey:organisation_id" json:"organisation,omitempty"`
-	Users          []User        `gorm:"many2many:application_users;" json:"users"`
-	AccessToken    string        `gorm:"column:access_token" json:"access_token,omitempty"`
-	HashedToken    string        `gorm:"column:hashed_token" json:"-"`
+	Name           string             `gorm:"column:name" json:"name"`
+	Slug           string             `gorm:"column:slug" json:"slug"`
+	Description    string             `gorm:"column:description" json:"description"`
+	URL            string             `gorm:"column:url" json:"url"`
+	MediumID       *uint              `gorm:"column:medium_id;default:NULL" json:"medium_id"`
+	Medium         *Medium            `gorm:"foreignKey:medium_id" json:"medium"`
+	OrganisationID uint               `gorm:"column:organisation_id" json:"organisation_id"`
+	Organisation   *Organisation      `gorm:"foreignKey:organisation_id" json:"organisation,omitempty"`
+	Users          []User             `gorm:"many2many:application_users;" json:"users"`
+	Tokens         []ApplicationToken `json:"tokens"`
+}
+
+type ApplicationToken struct {
+	Base
+	Name          string       `gorm:"column:name" json:"name"`
+	Description   string       `gorm:"column:description" json:"description"`
+	ApplicationID *uint        `gorm:"column:application_id" json:"application_id"`
+	Application   *Application `gorm:"foreignKey:application_id" json:"application"`
+	AccessToken   string       `gorm:"column:access_token" json:"access_token,omitempty"`
+	HashedToken   string       `gorm:"column:hashed_token" json:"-"`
 }
 
 var applicationUserKey ContextKey = "application_user"
